<resources>
    <string name="app_name">InfoBook</string>
    <string name="lbl_baixando_informacoes_dos_livros">Baixando informações dos livros</string>
    <string name="lbl_sem_conexcao">Sem Conexão</string>
    <string name="lbl_nao_tem_favoritos">Não tem favoritos</string>
    <string name="contDes_sem_conexao_internet">Sem conexão a internet</string>
    <string name="contDesc_atualizar">Atualizar, intentar novamente a conexão</string>
    <string name="lbl_sem_conex_internet">Sem conexão a internet</string>
    <string name="acao">Ação</string>
    <string name="aventura">Aventura</string>
    <string name="drama">Drama</string>
    <string name="fantasia">Fantasía</string>
    <string name="historia">Historia</string>
    <string name="horror">Horror</string>
    <string name="misterio">Misterio</string>
    <string name="religiao">Religião</string>
    <string name="romance">Romance</string>
    <string name="ciencia">Ciencia</string>
    <string name="ficcao_cientifica">Ficção científica</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Fechar</string>
    <string name="anterior">Anterior</string>
    <string name="lbl_compartilhar">Compartilhar</string>
    <string name="lbl_editora">Editora:</string>
    <string name="lbl_data_de_edicao">Data de Edição:</string>
    <string name="lbl_idioma">Idioma:</string>
    <string name="lbl_total_de_paginas">Total de Páginas:</string>
    <string name="lbl_categorias">Categorías:</string>
    <string name="lbl_descricao">Descrição:</string>
    <string name="action_share">Compartilhar</string>
    <string name="lbl_minha_biblioteca">Minha Biblioteca</string>
    <string name="lbl_favoritos">Favoritos</string>
    <string name="uri_desconhecida">Uri Desconhecida</string>
    <string name="error_inserir">Error ao inserir em</string>
    <string name="lbl_add_a_favoritos">Add a favoritos</string>
    <string name="lbl_favorito">Favorito</string>
    <string name="lbl_save_favorites">Salvado em favoritos</string>
    <string name="lbl_delete_favorites">Removido de favoritos</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_maps">Map</string>
    <string name="lbl_opcoes">Opções</string>
    <string name="lbl_tela_principal">Tela Principal</string>
    <string name="lbl_livrarias">Livrarias</string>
    <string name="lbl_bibliotecas">Bibliotecas</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

</resources>
