<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleTextAppearance="@style/Toolbar.TitleCollapsing"
            app:expandedTitleTextAppearance="@style/Toolbar.TitleExpanded"
            app:expandedTitleMarginStart="72dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <include layout="@layout/tool_bar"
                android:id="@+id/tool_bar">
            </include>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:scrollbarStyle="outsideOverlay"
        android:saveEnabled="true"
        android:paddingTop="8dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingBottom="8dp" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleLarge"
            android:layout_centerInParent="true"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_aguarde"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/progressBar"
            android:layout_centerHorizontal="true"
            android:text="@string/lbl_baixando_informacoes_dos_livros"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/img_SemConexao"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/sem_wifi"
            android:visibility="gone"
            android:contentDescription="@string/contDes_sem_conexao_internet"/>


        <TextView
            android:id="@+id/tv_semConexao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_SemConexao"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:textSize="16sp"
            android:textColor="@color/primaryText"
            android:text="@string/lbl_sem_conexcao"/>

        <TextView
            android:id="@+id/tv_semFavoritos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            android:textSize="18sp"
            android:textColor="@color/primaryText"
            android:text="@string/lbl_nao_tem_favoritos"/>

        <ImageView
            android:id="@+id/img_atualizar"
            android:layout_marginTop="8dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_below="@id/tv_semConexao"
            android:src="@drawable/btn_atualizar"
            android:visibility="gone"
            android:contentDescription="@string/contDesc_atualizar"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>